# ode-string-solver

./: README.md  foo1.py  pyproject.toml
examples/: bvp_example.py  generate_script_example.py  ivp_example.py
src/numerical_ode_solver/: __init__.py  _common.py  bvp.py  ivp.py
src/ode_string_solver/: __init__.py  solver.py
tests/: test_bvp_pipeline.py  test_ivp_pipeline.py  test_readme_examples.py
