[project]
name = "ode-string-solver"
version = "0.1.0"
description = "String-based ODE/BVP parsing and SciPy solver helpers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "sympy>=1.12",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ode_string_solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
